fixed page overflow issues

--- a/FilmFlix/static/styles/MovieListStyles.css
+++ b/FilmFlix/static/styles/MovieListStyles.css
@@ -20,6 +20,7 @@
 
 aside {
     width: 24rem;
+    gap: 3.5rem;
     border-right: 1px solid var(--clr-aside-rule);
     padding: 3.3rem 1.8rem 2rem 3.7em;
     flex-direction: column;
@@ -110,21 +111,16 @@ aside {
     font-weight: var(--fw-bold);
 }
 
-/* .bi-plus-square {
-    transform: translateY(0.1rem);
-} */
-
 /* --------------------------------------------------------------------- MOVIE TABLE */
 
 .movie-table-container {
     margin: 2.4rem auto 0;
+    height: 75vh;
     padding-right: 3%;
     width: fit-content;
     transform: translateX(5%);
     overflow: scroll;
     scroll-behavior: smooth;
-    justify-content: center;
-    align-items: center;
 }
 
 .movie-table-container::-webkit-scrollbar {
@@ -139,7 +135,6 @@ aside {
 
 .movie-table {
     width: 95%;
-    height: 100%;
     max-width: 1150px;
     row-gap: 20px;
     border-spacing: 0;
@@ -148,7 +143,7 @@ aside {
 
 tbody {
     display: block;
-    height: 39.8rem;
+    /* height: 39.8rem; */
     position: relative;
 }
 
@@ -169,10 +164,6 @@ tr {
     height: 50px;
     border-bottom: 1px solid var(--clr-rule);
     user-select: none;
-}
-
-.tbl-keys :last-child {
-    width: 67px;
 }
 
 .mv-title, .tbl-key:first-of-type {
